--- a/src/main/resources/static/investment/investmentCreate.html
+++ b/src/main/resources/static/investment/investmentCreate.html
@@ -122,13 +122,13 @@
                 console.log(ddd);
                 var testjson = getInvestmentJSON(null, $('input[name=name]').val(), $('input[name=amount]').val(), $('input[name=buyprice]').val(), $('input[name=investmentDate]').val(), selectedTextPick);
                 console.log(testjson);
-                postInvestment(getInvestmentJSON(null, $('input[name=name]').val(), $('input[name=amount]').val(), $('input[name=buyprice]').val(), $('input[name=investmentDate]').val(), selectedTextPick), function (result) {
+                /*postInvestment(getInvestmentJSON(null, $('input[name=name]').val(), $('input[name=amount]').val(), $('input[name=buyprice]').val(), $('input[name=investmentDate]').val(), selectedTextPick), function (result) {
                     window.location.replace("/expense");
                 }, function (error) {
                     $("#error-modal").modal('show');
                     $("#error-text").text(error);
                 });
-                event.preventDefault();
+                event.preventDefault();*/
             });
         });        
     </script>
