--- a/src/main/resources/static/investment/investmentCreate.html
+++ b/src/main/resources/static/investment/investmentCreate.html
@@ -117,18 +117,18 @@
 
                 alert(selectedTextPick);
                 var buypr = $('input[name=buyprice]').val();
-                console.log(buypr);
+                alert("buypr:" + buypr);
                 var ddd = $('input[name=investmentDate]').val();
-                console.log(ddd);
+                alert("date:" + ddd);
                 var testjson = getInvestmentJSON(null, $('input[name=name]').val(), $('input[name=amount]').val(), $('input[name=buyprice]').val(), $('input[name=investmentDate]').val(), selectedTextPick);
-                console.log(testjson);
+                alert(testjson);
                 /*postInvestment(getInvestmentJSON(null, $('input[name=name]').val(), $('input[name=amount]').val(), $('input[name=buyprice]').val(), $('input[name=investmentDate]').val(), selectedTextPick), function (result) {
                     window.location.replace("/expense");
                 }, function (error) {
                     $("#error-modal").modal('show');
                     $("#error-text").text(error);
-                });
-                event.preventDefault();*/
+                });*/
+                event.preventDefault();
             });
         });        
     </script>
