--- a/src/main/resources/static/investment/investmentCreate.html
+++ b/src/main/resources/static/investment/investmentCreate.html
@@ -120,7 +120,7 @@
                 alert("buypr:" + buypr);
                 var ddd = $('input[name=investmentDate]').val();
                 alert("date:" + ddd);
-                var testjson = getInvestmentJSON(null, $('input[name=name]').val(), $('input[name=amount]').val(), $('input[name=buyprice]').val(), $('input[name=investmentDate]').val(), selectedTextPick);
+                var testjson = getInvestmentJSON(null, $('input[name=name]').val(), $('input[name=amount]').val(), $('input[name=buyprice]').val(), $('input[name=investmentDate]').val(), $('.form-select').val());
                 alert(testjson);
                 /*postInvestment(getInvestmentJSON(null, $('input[name=name]').val(), $('input[name=amount]').val(), $('input[name=buyprice]').val(), $('input[name=investmentDate]').val(), selectedTextPick), function (result) {
                     window.location.replace("/expense");
