--- a/src/main/resources/static/investment/investment.html
+++ b/src/main/resources/static/investment/investment.html
@@ -176,8 +176,8 @@
             }
 
             $("#deleteData").click(function () {
-                deleteCategory($(this).attr('data-id'), function (result) {
-                    window.location.replace("/category");
+                deleteInvestment($(this).attr('data-id'), function (result) {
+                    window.location.replace("/investment");
                 });
             });
         });
