--- a/src/main/resources/static/investment/investmentEdit.html
+++ b/src/main/resources/static/investment/investmentEdit.html
@@ -52,16 +52,13 @@
                     </div>
                 </nav>
                 <div class="container-fluid">
-                    <h3 class="text-dark mb-4">Edit expense</h3>
+                    <h3 class="text-dark mb-4">Edit investment</h3>
                     <div class="card shadow">
                         <div class="card-header py-3">
-                            <p class="text-primary m-0 fw-bold">Expense records</p>
+                            <p class="text-primary m-0 fw-bold">Investment record</p>
                         </div>
                         <div class="card-body">
                             <form id="form" method="post">
-                                <div class="form-group mb-3">
-                                    <div class="input-group"><span class="input-group-text">ID </span><input class="form-control" type="text" name="id" readonly=""></div>
-                                </div>
                                 <div class="form-group mb-3">
                                     <div class="input-group"><span class="input-group-text">Name </span><input class="form-control" type="text" name="name"></div>
                                 </div>
@@ -113,14 +110,15 @@
                 console.log(selectedText);
             });
 
-            expenseID = getURLParameter('id');
-            if (expenseID !== null) {
-                getExpenses(expenseID, function (result) {
+            investmentID = getURLParameter('id');
+            if (investmentID !== null) {
+                getExpenses(investmentID, function (result) {
                     $('input[name=id]').val(result["id"]);
                     $('input[name=name]').val(result["name"]);
-                    $('input[name=description]').val(result["description"]);
+                    $('input[name=symbol]').val(result["symbol"]);
                     $('input[name=amount]').val(result["amount"]);
-                    $('input[name=expenseDate]').val(result["expenseDate"]);
+                    $('input[name=buyprice]').val(result["buyprice"]);
+                    $('input[name=investmentDate]').val(result["investmentDate"]);
 
                     var savedCategoryId = result["category"]["id"];
                     $("#dropdown-boot").append($("<option value=\"" + result["category"]["id"] + "\" selected> " + result["category"]["name"] + "</option>"));
@@ -134,10 +132,9 @@
                     });
                 });
             }
-
             $("#form").submit(function (event) {
-                putExpense(expenseID, getExpenseJSON($('input[name=id]').val(), $('input[name=name]').val(), $('input[name=description]').val(), $('input[name=amount]').val(), $('input[name=expenseDate]').val(), $('.form-select').val(), selectedTextPick), function (result) {
-                    window.location.replace("/expense");
+                putInvestment(investmentID, getInvestmentJSON($('input[name=id]').val(), $('input[name=name]').val(), $('input[name=amount]').val(), $('input[name=buyprice]').val(), $('input[name=investmentDate]').val(), $('.form-select').val()), function (result) {
+                    window.location.replace("/investment");
                 }, function (error) {
                     $("#error-modal").modal('show');
                     $("#error-text").text(error);
