--- a/src/main/resources/static/investment/investmentEdit.html
+++ b/src/main/resources/static/investment/investmentEdit.html
@@ -66,7 +66,7 @@
                                     <div class="input-group"><span class="input-group-text">Description </span><input class="form-control" type="text" name="description"></div>
                                 </div>
                                 <div class="form-group mb-3">
-                                    <div class="input-group"><span class="input-group-text">Date </span><input class="form-control" type="date" name="expenseDate"/></div>
+                                    <div class="input-group"><span class="input-group-text">Date </span><input class="form-control" type="date" name="investmentDate"/></div>
                                 </div>
                                 <div class="form-group mb-3">
                                     <div class="input-group"><span class="input-group-text">Amount </span><input class="form-control" type="text" name="amount"></div>
