--- a/src/main/resources/static/investment/investmentEdit.html
+++ b/src/main/resources/static/investment/investmentEdit.html
@@ -63,19 +63,21 @@
                                     <div class="input-group"><span class="input-group-text">Name </span><input class="form-control" type="text" name="name"></div>
                                 </div>
                                 <div class="form-group mb-3">
-                                    <div class="input-group"><span class="input-group-text">Description </span><input class="form-control" type="text" name="description"></div>
-                                </div>
-                                <div class="form-group mb-3">
                                     <div class="input-group"><span class="input-group-text">Date </span><input class="form-control" type="date" name="investmentDate"/></div>
                                 </div>
                                 <div class="form-group mb-3">
                                     <div class="input-group"><span class="input-group-text">Amount </span><input class="form-control" type="text" name="amount"></div>
                                 </div>
                                 <div class="form-group mb-3">
+                                    <div class="input-group"><span class="input-group-text">Buy price </span><input class="form-control" type="text" name="buyprice"></div>
+                                </div>
+                                <div class="form-group mb-3">
                                     <div class="input-group">
-                                        <span class="input-group-text">Category </span>
+                                        <span class="input-group-text">Symbol</span>
                                         <select class="form-select" aria-label="Default select example" id="dropdown-boot">
-                                            
+                                            <option value="BTC">BTC - Bitcoin</option>
+                                            <option value="ETH">ETH - Ethereum</option>>
+                                            <option value="XRP">XRP - Ripple</option>
                                         </select>
                                     </div>
                                 </div>
