--- a/src/main/resources/static/investment/investment.html
+++ b/src/main/resources/static/investment/investment.html
@@ -186,7 +186,8 @@
                 $.getJSON('https://data.messari.io/api/v1/assets/btc/metrics', function(data) {
                     // JSON result in `data` variable
                     console.log(data);
-                    alert(data["market_data"]["price_usd"]);
+                    var json = JSON.parse(data);
+                    alert(json.market_data.price_usd);
                 });
             }
 
