--- a/src/main/resources/static/investment/investment.html
+++ b/src/main/resources/static/investment/investment.html
@@ -187,7 +187,7 @@
                     // JSON result in `data` variable
                     console.log(data);
                     var json = JSON.parse(data);
-                    alert(json.market_data.price_usd);
+                    alert(json.data.market_data.price_usd);
                 });
             }
 
