--- a/src/main/resources/static/investment/investment.html
+++ b/src/main/resources/static/investment/investment.html
@@ -192,7 +192,7 @@
             function getPrice(symbol) {
                 alert(symbol);
                 $.getJSON('https://data.messari.io/api/v1/assets/' + symbol + '/metrics', function(data) {
-                    return data.data.market_data.price_usd.toString();
+                    return data.data.market_data.price_usd;
                 });
             }
 
