--- a/src/main/resources/static/investment/investment.html
+++ b/src/main/resources/static/investment/investment.html
@@ -177,7 +177,7 @@
                         var totalBuyPrice = item.amount * item.buyprice;
                         var symbol = item.symbol.toString();
                         alert("symbol: " + symbol)
-                        var actualPrice = 0;
+                        var actualPrice;
 
                         $.getJSON('https://data.messari.io/api/v1/assets/' + symbol + '/metrics', function(data) {
                             console.log(data.data.market_data.price_usd);
